--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,10 +1,12 @@
 server {
     listen 80;
     server_name localhost;
+    root /var/www/html/public;
+    index index.php;
 
     # Frontend location
     location / {
-        proxy_pass http://frontend;
+        proxy_pass http://imt-frontend;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -14,21 +16,33 @@ server {
 
     # Backend API location
     location /api {
-        proxy_pass http://backend:9000;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
+        allow 172.16.0.0/12;  # Docker's default bridge network range
+        allow 192.168.0.0/16; # Additional Docker network range
+        allow 10.0.0.0/8;     # Additional Docker network range
+        deny all;             # Deny all other requests
 
-        # PHP handling
+        # Restrict by specific container IP
+        # allow 172.20.0.5;   # Frontend container's IP
+
+        try_files $uri $uri/ /index.php?$query_string;
+
         location ~ \.php$ {
             fastcgi_split_path_info ^(.+\.php)(/.+)$;
-            fastcgi_pass backend:9000;
+            fastcgi_pass imt-backend:9000;
             fastcgi_index index.php;
             include fastcgi_params;
-            fastcgi_param SCRIPT_FILENAME /var/www/html/public$fastcgi_script_name;
+            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
             fastcgi_param PATH_INFO $fastcgi_path_info;
         }
+    }
+
+    # Handle other PHP files
+    location ~ \.php$ {
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        fastcgi_pass imt-backend:9000;
+        fastcgi_index index.php;
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
     }
 }
